Fixed cropped product in cart drawer and buttons changing every swiper

--- a/assets/swiper-cart.css
+++ b/assets/swiper-cart.css
@@ -1,10 +1,22 @@
-.cart-swiper-wrapper-container {
+.drawer__inner .cart-swiper-wrapper-container {
    padding: 8px 0px;
    position: relative;
    width: 100%;
    max-width: 90%;
    margin: 0 auto 50px;
    z-index: 1;
+}
+
+.cart-swiper-wrapper-container .cart-swiper {
+   width: 100%;
+   height: 100%;
+   padding: 0px 10px;
+   gap: 20px;
+   margin: 0 auto;
+   overflow: visible;
+   position: relative;
+   max-width: 100%;
+   padding: 0px 5px;
 }
 
 .cart-swiper .cart-swiper-title {
@@ -16,20 +28,9 @@
    height: auto;
 }
 
-.cart-swiper {
-   width: 100%;
-   height: 100%;
-   padding: 0px 10px;
-   gap: 20px;
-   margin: 0 auto;
-   overflow: hidden;
-   position: relative;
-   max-width: 100%;
-   padding: 0px 5px;
-}
-
 .cart-swiper .card-product {
-   transform: scale(0.8);
+   width: 80%;
+   margin: 0 auto;
 }
 
 .swiper-wrapper {
